--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="images/logo.png" alt="Logo" id="#">
             </a>
             <nav>
                 <i class="fa-solid fa-bars"></i>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Pricing</a></li>
@@ -55,7 +55,52 @@
         </div>
         <i class="fas fa-chevron-left fa-2x"></i>
         <i class="fas fa-chevron-right fa-2x"></i>
+        <ul>
+            <li></li>
+            <li class="active"></li>
+            <li></li>
+        </ul>
     </div>
     <!-- End Landing -->
+    <!-- Start Services -->
+    <div class="services" id="services">
+        <div class="container">
+            <div class="main-header">
+                <h2>services</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                <div class="srv-content">
+                    <div class="srv-box">
+                        <i class="fa-solid fa-display fa-3x"></i>
+                        <div class="text">
+                            <h3>Vorem amet intuitive</h3>
+                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                        </div>
+                    </div>
+                    <div class="srv-box">
+                        <i class="fa-solid fa-gear fa-3x"></i>
+                        <div class="text">
+                            <h3>Vorem amet intuitive</h3>
+                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                        </div>
+                    </div>
+                    <div class="srv-box">
+                        <i class="fa-solid fa-pen-ruler fa-3x"></i>
+                        <div class="text">
+                            <h3>Vorem amet intuitive</h3>
+                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                        </div>
+                    </div>
+                    <div class="srv-box">
+                        <i class="fa-solid fa-camera fa-3x"></i>
+                        <div class="text">
+                            <h3>Vorem amet intuitive</h3>
+                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services -->
 </body>
 </html>
