--- a/index.html
+++ b/index.html
@@ -102,5 +102,21 @@
         </div>
     </div>
     <!-- End Services -->
+    <!-- Start Design -->
+    <div class="design">
+        <div class="image">
+            <img src="images\mobile.png" alt="">
+        </div>
+        <div class="text">
+            <h2>our design comes with...</h2>
+            <ul>
+                <li>responsive design</li>
+                <li>modern and clean design</li>
+                <li>clean code</li>
+                <li>browser friendly</li>
+            </ul>
+        </div>
+    </div>
+    <!-- End Design -->
 </body>
 </html>
