end of template

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Start Header Section -->
+<!-- Start Header Section -->
     <header>
         <div class="container">
             <a href="#" class="logo">
@@ -39,8 +39,8 @@
             </nav>
         </div>
     </header>
-    <!-- End Header Section -->
-    <!-- Start Landing -->
+<!-- End Header Section -->
+<!-- Start Landing -->
     <div class="landing">
         <div class="over"></div>
         <div class="text">
@@ -61,8 +61,8 @@
             <li></li>
         </ul>
     </div>
-    <!-- End Landing -->
-    <!-- Start Services -->
+<!-- End Landing -->
+<!-- Start Services -->
     <div class="services" id="services">
         <div class="container">
             <div class="main-header">
@@ -101,8 +101,8 @@
             </div>
         </div>
     </div>
-    <!-- End Services -->
-    <!-- Start Design -->
+<!-- End Services -->
+<!-- Start Design -->
     <div class="design">
         <div class="image">
             <img src="images\mobile.png" alt="">
@@ -117,6 +117,334 @@
             </ul>
         </div>
     </div>
-    <!-- End Design -->
+<!-- End Design -->
+<!-- Start portfolio -->
+    <div class="portfolio">
+        <div class="container">
+            <div class="main-header">
+                <h2>Portfolio</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+        </div>
+        <div class="tools-bar">
+            <ul>
+                <li>All</li>
+                <li>App</li>
+                <li>Photo</li>
+                <li>Web</li>
+                <li>Print</li>
+            </ul>
+        </div>
+        <div class="images-portfolio">
+            <div class="images">
+                <img src="images/shuffle-01.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="images">
+                <img src="images/shuffle-02.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="images">
+                <img src="images/shuffle-03.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="images">
+                <img src="images/shuffle-04.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="images">
+                <img src="images/shuffle-05.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="images">
+                <img src="images/shuffle-06.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="images">
+                <img src="images/shuffle-07.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="images">
+                <img src="images/shuffle-08.jpg" alt="">
+                <div class="text-portfolio">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="more">More</a>
+    </div>
+<!-- End portfolio -->
+<!-- Start Video -->
+    <div class="video">
+        <video src="images/awesome-video.mp4" autoplay muted loop></video>
+        <div class="text-video">
+            <h2>super awesome video here</h2>
+            <p>Its all you need</p>
+            <input type="button" value="see more">
+        </div>
+    </div>
+<!-- End Video -->
+<!-- Start About -->
+    <div class="about">
+        <div class="container">
+            <div class="main-header">
+                <h2>About Us</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                <div class="image-about">
+                    <img src="images/about.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- End About -->
+<!-- Start Status -->
+    <div class="status">
+        <div class="container">
+            <div class="text-stetus">
+                <div class="box">
+                    <i class="fa-solid fa-mug-hot"></i>
+                    <div class="number">1.236</div>
+                    <p>Coffee Drinks</p>
+                </div>
+                <div class="box">
+                    <i class="fa-regular fa-folder"></i>
+                    <div class="number">256</div>
+                    <p>Completed Projects</p>
+                </div>
+                <div class="box">
+                    <i class="fa-regular fa-envelope"></i>
+                    <div class="number">1,743</div>
+                    <p>Mail Sent</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-trophy"></i>
+                    <div class="number">17</div>
+                    <p>Awards Received</p>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- End Status -->
+<!-- Start Skills -->
+    <div class="our-skills">
+        <div class="container">
+            <div class="testimonials">
+                <h3>testimonials</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                <div class="content">
+                    <img src="images/skills-01.jpg" alt="">
+                    <div class="text">
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                        <p>John Doe, CEO</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <img src="images/skills-02.jpg" alt="">
+                    <div class="text">
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                        <p>John Doe, CEO</p>
+                    </div>
+                </div>
+                <ul>
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="skills">
+                <h3>skills</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                <div class="prog adobe">
+                    <h4>adobe</h4>
+                    <div class="prog-bar">
+                        <span class="bar" data-progress="90%"></span>
+                    </div>
+                    
+                </div>
+                <div class="prog html-css">
+                    <h4>html & css</h4>
+                    <div class="prog-bar">
+                        <span class="bar" data-progress="85%"></span>
+                    </div>
+                </div>
+                <div class="prog javascript">
+                    <h4>javascript</h4>
+                    <div class="prog-bar">
+                        <span class="bar" data-progress="80%"></span>
+                    </div>
+                </div>
+                <div class="prog php">
+                    <h4>php</h4>
+                    <div class="prog-bar">
+                        <span class="bar" data-progress="90%"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- End Skills -->
+<!-- Start Quote -->
+    <div class="quote">
+        <div class="container">
+            <q>accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</q>
+            <span>John Doe</span>
+        </div>
+    </div>
+<!-- End Quote -->
+<!-- Start Price -->
+    <div class="price">
+        <div class="container">
+            <div class="main-header">
+                <h2>pricing</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="plans">
+                <div class="plane">
+                    <div class="head">
+                        <h3>basic</h3>
+                        <p><sup>$</sup>19<sub>/mo</sub></p>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>                    
+                        <li>Feature</li>                    
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+                <div class="plane">
+                    <div class="head">
+                        <h3>premium</h3>
+                        <p><sup>$</sup>29<sub>/mo</sub></p>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>                    
+                        <li>Feature</li>                    
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+                <div class="plane">
+                    <div class="head">
+                        <h3>pro</h3>
+                        <p><sup>$</sup>39<sub>/mo</sub></p>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>                    
+                        <li>Feature</li>                    
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+                <div class="plane">
+                    <div class="head">
+                        <h3>platinum</h3>
+                        <p><sup>$</sup>49<sub>/mo</sub></p>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>                    
+                        <li>Feature</li>                    
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+            </div>
+            <p class="contant-text">Contact us if you have special request</p>
+            <a href="#" class="contant-link">Contact us</a>
+        </div>
+    </div>
+<!-- End Price -->
+<!-- Start Subscribe -->
+    <div class="subscribe">
+        <div class="container">
+            <form action="" class="e-mail">
+                <i class="fa-regular fa-envelope"></i>
+                <input type="email" name="mail" placeholder="Your Email">
+                <input type="submit" value="subscribe">
+            </form>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.</p>
+        </div>
+    </div>
+<!-- End Subscribe -->
+<!-- Start Contact -->
+<div class="contact">
+    <div class="container">
+        <div class="main-header">
+            <h2>contact us</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+        </div>
+        <div class="content">
+            <form action="">
+                <input type="text" name="userName" placeholder="Your Name">
+                <input type="email" name="e-mail" placeholder="Your Email">
+                <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="send message">
+            </form>
+            <div class="info">
+                <h3>get in touch</h3>
+                <p>
+                    +00 123.456.789<br>
+                    +00 123.456.789
+                </p>
+                <h3>where we are</h3>
+                <p>
+                    awesome address 17 <br>
+                    new york, <span>nyc</span><br>
+                    123-4567-890<br>
+                    <span>usa</span>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Contact -->
+<!-- Start Footer -->
+<footer>
+    <div class="container">
+        <img src="images/logo.png" alt="logo">
+        <p>we are social</p>
+        <div class="icon">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-solid fa-house-chimney"></i>
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <p>&#169; 2022 <span>kasper</span> all right reserved</p>
+    </div>
+</footer>
+<!-- End Footer -->
 </body>
 </html>
