Add javaScript file

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
         </div>
         <p>&#169; 2022 <span>kasper</span> all right reserved</p>
     </div>
+    <script src="javaScript/main.js"></script>
 </footer>
 <!-- End Footer -->
 </body>
