add id to elements

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="search">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -119,7 +119,7 @@
     </div>
 <!-- End Design -->
 <!-- Start portfolio -->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <div class="container">
             <div class="main-header">
                 <h2>Portfolio</h2>
@@ -207,7 +207,7 @@
     </div>
 <!-- End Video -->
 <!-- Start About -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <div class="main-header">
                 <h2>About Us</h2>
@@ -314,7 +314,7 @@
     </div>
 <!-- End Quote -->
 <!-- Start Price -->
-    <div class="price">
+    <div class="price" id="pricing">
         <div class="container">
             <div class="main-header">
                 <h2>pricing</h2>
@@ -400,7 +400,7 @@
     </div>
 <!-- End Subscribe -->
 <!-- Start Contact -->
-<div class="contact">
+<div class="contact" id="contact">
     <div class="container">
         <div class="main-header">
             <h2>contact us</h2>
